# llm_projects

./: README.md  pyproject.toml
.github/workflows/: ci.yml
agents.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
autogen/: agent_chat.ipynb  basics.ipynb  ticket.db  tickets.db
autogen/sandbox/: flights.md
config/: config.py
crew/: basics.ipynb
crew/automated_planner_agent/: README.md  metric.py  pyproject.toml
crew/automated_planner_agent/output/: Website_design.md
crew/automated_planner_agent/src/automated_planner_agent/: crew.py  main.py  tes.ipynb
crew/automated_planner_agent/src/automated_planner_agent/config/: agents.yaml  tasks.yaml
crew/coder/: pyproject.toml
crew/debate/: pyproject.toml  report.md
crew/engineering_team/: pyproject.toml
crew/financial_agent/: README.md  pyproject.toml
crew/financial_agent/output/: report.md  report1.md
crew/financial_agent/src/financial_agent/: crew.py  main.py
crew/financial_agent/src/financial_agent/config/: tasks.yaml
crew/report_analysis/: README.md  pyproject.toml
crew/report_analysis/src/report_analysis/: crew.py  main.py
crew/report_analysis/src/report_analysis/config/: agents.yaml  tasks.yaml
crew/resume_optimiser/: ARCHITECTURE_ANALYSIS.md  Dockerfile  Dockerfile.api  Dockerfile.streamlit  README.md  pyproject.toml  pytest.ini
crew/resume_optimiser/evals/: README.md
crew/resume_optimiser/guides/1/: ENTERPRISE_ROADMAP.md  MONITORING_SETUP.md  PRODUCTION_DEPLOYMENT_GUIDE.md
crew/resume_optimiser/guides/2/: ENTERPRISE_SYSTEM_DESIGN.md  IMPLEMENTATION_GUIDE.md  PROJECT_REPORT.md  detail.md
crew/resume_optimiser/guides/3/: all_detail.md  azure.md
crew/resume_optimiser/infra/azure/: README.md
crew/resume_optimiser/k8s/: README.md
crew/resume_optimiser/k8s/base/: deploy-api.yaml  deploy-bento.yaml  deploy-worker.yaml  hpa-api.yaml  ingress.yaml
crew/resume_optimiser/ops/: README.md
crew/resume_optimiser/ops/runbooks/: secrets_policy.md
crew/resume_optimiser/output/: company_research.json  job_analysis.json  resume_optimization.json
crew/resume_optimiser/output/2ab32dc331a4/: final_report.md  optimized_resume.md
crew/resume_optimiser/prompts/: README.md
crew/resume_optimiser/services/api/: Dockerfile  README.md
crew/resume_optimiser/services/bento-resume-ml/: Dockerfile  README.md  bentofile.yaml  service.py
crew/resume_optimiser/services/worker/: Dockerfile  README.md  worker.py
crew/resume_optimiser/src/resume_optimiser/: __init__.py  api.py  app.py  crew.py  main.py  s3_utils.py
crew/resume_optimiser/src/resume_optimiser/config/: agents.yaml  tasks.yaml
crew/stock_picker/: pyproject.toml
langgraph/: basics.ipynb  evalutaion.ipynb  memory.db-shm  memory.db-wal  playwight.ipynb  tools.ipynb
langgraph/sidekick/: agents.py  (+2 more)
learning/: async.ipynb
llmops/: data_preparation.ipynb
openai_sdk/: concepts.ipynb  deep_research.ipynb  test.ipynb
push_notification/: app.py  config.py  loader.py  pushover.py  summary.txt  test.ipynb  tools.py
sale_agent/: test.ipynb
(+24 files in other folders)
