[project]
name = "automated_planner_agent"
version = "0.1.0"
description = "automated_planner_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0"
]

[project.scripts]
automated_planner_agent = "automated_planner_agent.main:run"
run_crew = "automated_planner_agent.main:run"
train = "automated_planner_agent.main:train"
replay = "automated_planner_agent.main:replay"
test = "automated_planner_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
