[project]
name = "financial_agent"
version = "0.1.0"
description = "financial_agent using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0"
]

[project.scripts]
financial_agent = "financial_agent.main:run"
run_crew = "financial_agent.main:run"
train = "financial_agent.main:train"
replay = "financial_agent.main:replay"
test = "financial_agent.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
