[project]
name = "report_analysis"
version = "0.1.0"
description = "report_analysis using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.175.0,<1.0.0"
]

[project.scripts]
report_analysis = "report_analysis.main:run"
run_crew = "report_analysis.main:run"
train = "report_analysis.main:train"
replay = "report_analysis.main:replay"
test = "report_analysis.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
