[project]
name = "resume_optimiser"
version = "0.1.0"
description = "resume_optimiser using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "boto3>=1.40.25",
    "crewai[tools]>=0.175.0,<1.0.0",
    "streamlit>=1.49.1",
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "pydantic",
    "PyMuPDF",
    "unstructured",
    "pysbd",
    "tiktoken",
    "mlflow>=2.8.0",
    "onnx>=1.15.0",
    "onnxruntime>=1.16.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0"
]

[project.scripts]
resume_optimiser = "resume_optimiser.main:run"
run_crew = "resume_optimiser.main:run"
train = "resume_optimiser.main:train"
replay = "resume_optimiser.main:replay"
test = "resume_optimiser.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/resume_optimiser"]

[tool.crewai]
type = "crew"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]


